--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,9 @@ yarn-error.log
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
+
+# Angular
+/src/environments/*.ts
 
 # Miscellaneous
 /.angular/cache
