--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "^13.3.12",
     "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.3.0",
