--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ yarn-error.log
 !.vscode/extensions.json
 
 # Angular
-/src/environments/*.ts
+/src/environments/environment.dev.ts
+/src/environments/environment.prod.ts
 
 # Miscellaneous
 /.angular/cache
