--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "cp src/environments/environment.prod.template.ts src/environments/environment.prod.ts && ng build",
+    "build": "node env-subst.js && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -33,6 +33,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.13",
+    "dotenv": "^16.0.3",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
