--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ yarn-error.log
 
 # Angular
 /src/environments/environment.dev.ts
-/src/environments/environment.prod.ts
+/src/environments/environment.pre-prod.ts
 
 # Miscellaneous
 /.angular/cache
