--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "module": "es2020",
     "lib": ["es2020", "dom"],
     "paths": {
+      "@shared-components/*": ["src/app/shared-components/*"],
       "@c/*": ["src/app/components/*"],
       "@m/*": ["src/app/models/*"],
       "@p/*": ["src/app/pages/*"],
