--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ngxs/devtools-plugin": "^3.8.1",
+    "@ngxs/form-plugin": "^3.8.1",
+    "@ngxs/logger-plugin": "^3.8.1",
+    "@ngxs/store": "^3.8.1",
     "meilisearch": "^0.32.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
