--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "module": "es2020",
     "lib": ["es2020", "dom"],
     "paths": {
+      "@store/*": ["src/app/store/*"],
       "@components/*": ["src/app/components/*"],
       "@models/*": ["src/app/models/*"],
       "@pages/*": ["src/app/pages/*"],
