check authentification for user before payment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,11 @@
     "module": "es2020",
     "lib": ["es2020", "dom"],
     "paths": {
-      "@auth-m/*": ["src/app/auth/models/*"],
-      "@auth-s/*": ["src/app/auth/services/*"],
-      "@auth-c/*": ["src/app/auth/components/*"],
-      "@auth/*": ["src/app/auth/*"],
+      "@auth-m/*": ["src/app/modules/auth/models/*"],
+      "@auth-s/*": ["src/app/modules/auth/services/*"],
+      "@auth-c/*": ["src/app/modules/auth/components/*"],
+      "@auth/*": ["src/app/modules/auth/*"],
+      "@core/*": ["src/app/core/*"],
       "@store/*": ["src/app/store/*"],
       "@components/*": ["src/app/components/*"],
       "@models/*": ["src/app/models/*"],
